--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,18 +28,24 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/login-ui.jar
+dist.jar=${dist.dir}/login-001.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/login-ui
+dist.jlink.output=${dist.jlink.dir}/login-001
 excludes=
-file.reference.common-image-3.9.4.jar=common-image-3.9.4.jar
+file.reference.activation-1.1.jar=activation-1.1.jar
+file.reference.javax.mail.jar=javax.mail.jar
+file.reference.miglayout-4.0.jar=miglayout-4.0.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=mysql-connector-java-5.1.23-bin.jar
 file.reference.TimingFramework-0.55.jar=TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.TimingFramework-0.55.jar}:\
-    ${file.reference.common-image-3.9.4.jar}
+    ${file.reference.miglayout-4.0.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.activation-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -74,8 +80,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=login-ui
-main.class=main.Login
+jlink.launcher.name=login-001
+main.class=com.raven.main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
