--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,6 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/login-001
 excludes=
-file.reference.activation-1.1.jar=activation-1.1.jar
 file.reference.javax.mail.jar=javax.mail.jar
 file.reference.miglayout-4.0.jar=miglayout-4.0.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=mysql-connector-java-5.1.23-bin.jar
@@ -44,8 +43,7 @@ javac.classpath=\
     ${file.reference.TimingFramework-0.55.jar}:\
     ${file.reference.miglayout-4.0.jar}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.activation-1.1.jar}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
